--- a/66-FM1-100.md
+++ b/66-FM1-100.md
@@ -3,7 +3,7 @@ layout: tindallgram
 date: Aug 30 1966 
 from: FM/Deputy Chief, Mission Planning and Analysis Division
 serial: 66-FM1-100
-subject: Notes regarding the AS-207/208 Guidence Systems Operation Plan (GSOP) meeting with MIT
+subject: Notes regarding the AS-207/208 Guidance Systems Operation Plan (GSOP) meeting with MIT
 ---
 During the week of August 15, we held a review of the AS-207/208 Guidance
 Systems Operation Plan (GSOP) at MIT. Some things interested me which
