--- a/66-FM1-109.md
+++ b/66-FM1-109.md
@@ -7,7 +7,7 @@ serial: 66-FM1-109
 subject: Mission rules needed for use with AGC self-check
 ---
 As you probably recall, we have had an exchange of views and memoranda
-regarding the usefullness of the Apollo computer program known as self-check.
+regarding the usefulness of the Apollo computer program known as self-check.
 This exchange was started by our attempt to cut the spacecraft
 computer program down to an acceptable size for the lunar mission.
 Current status is that the self-check programs are still in; however,
