--- a/66-FM1-112.md
+++ b/66-FM1-112.md
@@ -13,11 +13,11 @@ if its effect on the spacecraft state vector is less than some
 pre-established amount and would reject it if its effect is greater then
 some other (larger) pre-established amount. Data falling between these
 two criteria was to be accepted but a warning light was to be turned
-on. Dr. Shea commented that this seems unnecessarilly complicated - that
+on. Dr. Shea commented that this seems unnecessarily complicated - that
 really there is no apparent sense in having three conditions when two
 would do just as well. I must say, although I was foolish enough to
 argue at the time, I certainly agree now that we really should make this
-a imple binary decision. Use the data or don't use the data based on
+a simple binary decision. Use the data or don't use the data based on
 some pre-established level of quality - probably light a light when the
 computer is rejecting the data and do away with that central region
 altogether. I have searched my memory and can't recall why MIT proposed
