--- a/66-FM1-113.md
+++ b/66-FM1-113.md
@@ -23,7 +23,7 @@ to omit certain vital parts of the AS-504 descent guidance
 program from the AS-503 mission.  The purpose of this memo is to make
 sure that you all know this.
 
-It is my understanding that there are four main processers of the AS-504
+It is my understanding that there are four main processors of the AS-504
 descent guidance program which are not to be included in the AS-503
 program:
 
