--- a/66-FM1-129.md
+++ b/66-FM1-129.md
@@ -80,7 +80,7 @@ _LGC_
 Finally, I suppose I ought to add the following remark based strictly on
 my own intuition -- namely, we have almost certainly got a computer
 storage problem on the AS-504 programs again if all the above items are
-added to the AS-278 program, particuarly with all of the special flexibilities
+added to the AS-278 program, particularly with all of the special flexibilities
 and options which will be suggested.  Therefore, the fact that
 your favorite processors are listed above does not necessarily mean that
 we will be able to get them all in.
