--- a/66-FM1-59.md
+++ b/66-FM1-59.md
@@ -21,7 +21,7 @@ programs; it is not altogether a happy one.
 Our basic problem seems to center on the time available to prepare the
 computer program for these flights and on the fact that the computer
 is not big enough to contain all of the programs which appear to be either
-required or highly desirable for the mtssion. According to MIT estimates,
+required or highly desirable for the mission. According to MIT estimates,
 the programs which had been identified as needed for the CSM on the AS-504 
 mission are in the order of 15,000 words in excess of the 36,000
 word computer. The LEM computer storage capacity was exceeded by about
@@ -31,7 +31,7 @@ Since we have assumed a basic ground rule that no routines would be included
 in the AS-207/208 programs which are not in the AS-504 program,
 our first task was to reduce the AS-504 program requirements to a point
 where the CSM and LEM programs would fit within the computer storage
-available. After doing this, we went through tbe AS-504 programs and
+available. After doing this, we went through the AS-504 programs and
 determined which processors could be omitted from the AS-207/208 programs 
 if the overall schedule situation would be improved by their deletion. 
 Accordingly, our task at this meeting was to identify the lower
@@ -56,7 +56,7 @@ from the command module computer program:
 
 1. Concentric flight plan routines, which provide an onboard capability 
 for computing the first two maneuvers of the coelliptic flight
-plan, setting up proper initial conditions for termlnal phase, were deleted. 
+plan, setting up proper initial conditions for terminal phase, were deleted.
 Since flight crew safety is implicit in the rendezvous capability,
 we (MPAD) have accepted a task of identifying the various failure situations 
 in which the command module must rescue the LEM to assure ourselves
@@ -127,7 +127,7 @@ situation for AS-207/208, it may damage the schedule for AS-504, which
 is probably even more undesirable. Accordingly, we intend to review
 very carefully the overall schedule situation before any of the AS-504
 programs are omitted from the AS-207/208 programs. At the very least,
-it is intended that al1 internal programm interfaces be provided to insure 
+it is intended that all internal program interfaces be provided to insure
 the maximum similarity between the AS-207/208 and AS-504 programs.
 In fact, it may even prove desirable to substitute dummy programs for
 each of those deleted from the AS-504 program. MIT was in complete accord 
