--- a/66-FM1-64.md
+++ b/66-FM1-64.md
@@ -16,7 +16,7 @@ it will be possible to accurately determine the orientation of the command
 module's orbital plane. I am told they intend to do this after
 the command module has made a plane change, which occurs a couple of
 orbits before LEM ascent, and the results will be used to establish
-orbital insertion conditions for the LEM launch targetting.
+orbital insertion conditions for the LEM launch targeting.
 
 Could you analyze the situation, determining how well the various
 orbital elements may be determined for the following data gathering
