--- a/66-FM1-94.md
+++ b/66-FM1-94.md
@@ -21,7 +21,7 @@ they become available, the GSOP should be virtually acceptable without
 modification on the date of its publication and should permit the computer 
 program development to proceed much more quickly than it has in
 the past. We had previously discussed these mission programs and our
-pilot inpat and display requirements for them in detail a month or so
+pilot input and display requirements for them in detail a month or so
 ago with MIT, and the pieces of the GSOP I am talking about here reflected 
 that input very well. Therefore, most of the discussion was
 for purposes of clarification to assure a firm understanding on both
@@ -69,7 +69,7 @@ the crew to carry out this task, and under some abort situations lighting
 conditions can be unacceptable. Also, there are abort cases in which
 the closing velocity is too high for effective manual control. Recognizing 
 that procedures are available for utilizing the remaining computer 
-processors to cairry out the G&amp;N controlled braking maneuvers by
+processors to carry out the G&amp;N controlled braking maneuvers by
 proper pilot manipulation of the computer, we deleted the requirement
 for automatic computer logic for this task. The point is, we felt that
 there was insufficient justification to carry out the extra programming,
@@ -88,7 +88,7 @@ crew member to carry out a rendezvous in the CSM. For example, the only
 observational data available to the computer is from the sextant, and
 that requires manual tracking and input of observations into the computer.
 (The LEM has automatic radar tracking with its data available to the
-computer as it periodica]ly requests it.) And, of course, in order for
+computer as it periodically requests it.) And, of course, in order for
 the pilot to use this system, he has to be down in the navigation area
 of the spacecraft, which means he has to quit making observations sometime 
 before any SPS maneuver to get strapped into his seat. On top of
