--- a/66-FM1-95.md
+++ b/66-FM1-95.md
@@ -41,11 +41,11 @@ I'm certain that any attempt to make changes will only reduce our chances.
 The people who are currently carrying out the program checkout would have
 to make these changes, so obviously some of their effort must be diverted.
 
-In addition to that, these program changes would certainy make further 
+In addition to that, these program changes would certainly make further
 program checkout necessary and would tend to nullify some of that work
 which has already been carried out. Furthermore, although it would be
 nice for the crew to have these additional capabilities, there does not
-seem to be any technical justification for classifying them as madatory.
+seem to be any technical justification for classifying them as mandatory.
 Accordingly, it was my recommendation, supported by a number of other MSC
 people, that none of the crew recommended changes be made in the AS-204
 program. This recommendation was accepted by the G&N Subsystem Manager
@@ -62,7 +62,7 @@ during Apollo launch. Furthermore, such a capability is very nearly
 within our grasp, which makes it even more tantalizing. In reviewing
 the status of the work going on in support of this onboard function, I
 find that sticking to the current onboard displays will somewhat delay
-availablility of charts for the crew to use in this mission phase. Specifically,
+availability of charts for the crew to use in this mission phase. Specifically,
 this work, which has been primarily directed toward development 
 of the RTCC/MCC capability, is now estimated to be within about four
 weeks of completion and crew charts could have been made available at
