--- a/67-FM-T-41.md
+++ b/67-FM-T-41.md
@@ -47,7 +47,7 @@ module - sort of a disk - and, by golly, it's worked for me.
 d. _COLOSSUS_
 
 This is the name of the command module program designed to support the lunar landing mission as well as all development flights anyone has
-thought of, so far. According to Webster's New Collegiate Dictonary it
+thought of, so far. According to Webster's New Collegiate Dictionary it
 also means (1) A statue of gigantic size; as, the Colossus of Rhodes, a
 statue of Apollo, about 120 feet high, made by Chares about 280 B.C. 
 (2) Anything of gigantic size.
