--- a/67-FM-T-85.md
+++ b/67-FM-T-85.md
@@ -51,9 +51,9 @@ out in some program other than the current flight program assembly used
 by the rest of the program development personnel. Modified DAP's will
 only be added to this working, assembly when they are running properly.
 
-i) Much more coordinatlon and communicatlon between the various
+i) Much more coordination and communication between the various
 groups involved in software development is essential. It is Martin's
-intention to establish standing committees with periodlc meetings for
+intention to establish standing committees with periodic meetings for
 this purpose. These meetings will also be used for consideration and
 coordination of proposed changes.
 
