--- a/67-FM1-39.md
+++ b/67-FM1-39.md
@@ -32,10 +32,10 @@ ropes regardless of impact on any of MIT's program development
 work, including delivery of the manned mission computer programs. In fact,
 we have asked MIT to determine the extent of this across-the-board impact
 assuming all of the known deficiencies in the LM-1 program are removed,
-no matter how minor. Much more significant, howeverm is that without
+no matter how minor. Much more significant, however is that without
 doubt this situation is forcing us to adopt a new working philosophy
 which should be recognized and included in all of our planning - program
-develonment schedules, man loading, crew training_ spacecraft systems
+development schedules, man loading, crew training_ spacecraft systems
 tests, etc. It is clear that, as Ed Copps puts it, program "shelf life"
 is very short. That is, it is extremely unlikely we will ever fly with
 ropes manufactured substantially in advance of the mission; instead of
@@ -44,8 +44,8 @@ date we should release it at the latest possible date.
 
 The next question to be answered is - how far should the work on these
 assemblies proceed before being frozen (if you call slush "frozen")
-and put on the shelf until some key milastone associated with spacecraft
-flight readiness? Should complete flight qualiflcation Level 5 testing
+and put on the shelf until some key milestone associated with spacecraft
+flight readiness? Should complete flight qualification Level 5 testing
 be carried out with the realization that changes will come along forcing
 us to revise the program and thus to repeat substantial portions of the
 flight verification? Or should we merely carry the program development
