--- a/70-FM-T-5.md
+++ b/70-FM-T-5.md
@@ -3,7 +3,7 @@ layout: tindallgram
 date: Jan 13 1970
 from: FM/Deputy Chief
 serial: 70-FM-T-5
-subject: AAP CSM Computer Progrnm Requirements meeting
+subject: AAP CSM Computer Program Requirements meeting
 ---
 I thought it might be fun to have an overall AAP CSM Computer Program
 Requirements meeting so we've scheduled one on Wednesday, January 28, 1970 at 9
