--- a/66-FM1-104.md
+++ b/66-FM1-104.md
@@ -14,7 +14,7 @@ abort polynomial to retarget the LM powered flight to provide a direct
 intercept rendezvous trajectory. You asked how far this work had progressed
 since you felt such a capability would be "comfortable."
 
-In answer to that question, MIT Informed me that, whereas the concepts
+In answer to that question, MIT informed me that, whereas the concepts
 were well established, there was still a considerable amount of work
 required to complete this particular program. Furthermore, we have
 also deleted the direct ascent launch guidance, which is a necessary
