Updated line breaks to be *after* words hyphenated in source.

--- a/69-PA-T-93A.md
+++ b/69-PA-T-93A.md
@@ -13,8 +13,8 @@ tags:
 I really blew it at the June 5 Apollo Spacecraft Software Configuration 
 Control Board meeting. Although dozens of rather minor changes were 
 approved, the one I was most concerned about wasn't even discussed and I 
-completely forgot it. This memo is to inform you that we are now 
-desperately trying to include a capability in the LM computer program for a 
+completely forgot it. This memo is to inform you that we are now desperately 
+trying to include a capability in the LM computer program for a 
 lunar landing flight in November which substantially improves descent 
 abort targeting and procedures. Currently the LM descent abort programs 
 target the spacecraft to insertion conditions which is not entirely 
@@ -54,7 +54,7 @@ have chosen the so-called Rendezvous Radar Designate Routine.
 This final paragraph is on another subject, but I thought I would point 
 out that one of the more significant capabilities added last Thursday 
 was the capability for the crew to readout raw rendezvous radar range and 
-range rate data on the DSKY during the operation of the Rendezvous 
-Navigation program (P20). This capability had been requested several times 
+range rate data on the DSKY during the operation of the Rendezvous Navigation 
+program (P20). This capability had been requested several times 
 previously but never made it in to the program due to scheduling problems. 
 It is a real nice thing to have.
