67-PA-T-126A 67-PA-T-129A formatting updates

--- a/67-PA-T-126A.md
+++ b/67-PA-T-126A.md
@@ -7,10 +7,7 @@ serial: 67-PA-T-126A
 subject: Third Trajectory Control Data Priority Meeting for Spacecraft 101
 ---
 
-Reference memo 67-PA-T-110A dated December 4, 1967. The Trajectory Control Data Priority meeting which was scheduled for December 20, 1967, has been changed to January 10, 1968, at 9:00 a.m., Room 960, Building 2 of MSC.
-
-[signature]
-Howard W. Tindall, Jr.
-
-Addressees:
-(See attached list)
+Reference memo 67-PA-T-110A dated December 4, 1967. The Trajectory 
+Control Data Priority meeting which was scheduled for December 20, 
+1967, has been changed to January 10, 1968, at 9:00 a.m., Room 960, 
+Building 2 of MSC.
