Brackets need to be escaped

--- a/67-PA-T-128A.md
+++ b/67-PA-T-128A.md
@@ -7,9 +7,9 @@ serial: 67-PA-T-128A
 subject: Lunar lift off shall be planned at discrete times only.
 ---
 
-1. During our December 21 Ascent P[unintelligible] Data Priority meeting we concluded
+1. During our December 21 Ascent P\[unintelligible\] Data Priority meeting we concluded
 that a continuous launch window for lift off from the lunar surface is not
-a requirement. That is, all [unintelligible] planning, procedures and program
+a requirement. That is, all \[unintelligible\] planning, procedures and program
 development associated with the nominal lunar landing mission should be
 based on the assumption that one or more discrete lift off times will be
 selected for each revolution of the command module and failure to lift
