--- a/67-PA-T-127A.md
+++ b/67-PA-T-127A.md
@@ -9,14 +9,14 @@ subject: LM rendezvous radar during Ascent is about to go over the brink.
 
 1. It turns out providing justification for obtaining LM rendezvous
 radar data during Ascent from the lunar surface is as difficult as
-getting the data itself. this memorandum is to let you know that
+getting the data itself. This memorandum is to let you know that
 unless some sharp cookie comes along with sufficient justification we
 ain't gonna get it!
 
 2. There have been numerous memoranda and discussions in which the
 requirement for the use of the LM rendezvous radar during powered ascent
 was stated primarily as a data source to evaluate the performance of
-the ACS and the PNOCS both by the crew onboard the spacecraft and on
+the ACS and the PNGCS both by the crew onboard the spacecraft and on
 the ground. In addition, intuition supported this idea and so a good
 deal of work has proceded based on the assumption that the rendezvous
 radar data would be available. However, due to a series of circumstances
@@ -37,7 +37,7 @@ justification we discussed this subject in detail during the December
 justification does not appear to exist. The rationale for this statement
 is the subject of the following paragraph. The point to be made
 here is that unless a much stronger story can be put together, these
-proposed program changes will probably be rejected and redenzvous radar
+proposed program changes will probably be rejected and rendezvous radar
 data will not be available either during powered ascent or immediately
 after insertion into lunar orbit.
 
@@ -45,7 +45,7 @@ after insertion into lunar orbit.
 from the PNGCS to the AGS. How this would be done is thoroughly documented
 elsewhere but basically it was intended to determine the range rate of the LM with respect to the command module utilizing the PNGCS LM state vector
 and the AGS LM state vector separately, and then to compare these values
-with that actually measured utilizing the rendezvous radar. This informatoin
+with that actually measured utilizing the rendezvous radar. This information
 would be displayed on analog plots in the control center. The same
 comparison process would simultaneously be carried out with the range rate
 as computed and measured along the line of sight between the LM and on an
@@ -63,7 +63,7 @@ able to provide an independent measurement of the velocity magnitude
 particularly when inserting into lunar orbit from a centrally located
 landing site. The result is, if throughout ascent both the AGS and the
 PNGCS appear to be operating properly based on all data available but
-at insertion the PNGCS dhuts down the APS engine producing conditions 
+at insertion the PNGCS shuts down the APS engine producing conditions 
 which the AGS indicates to be suborbital, it will be impossible to determine
 which guidance system is correct without rendezvous radar data.
 Accordingly, it would be necessary to reinitiate thrusting immediately
@@ -92,7 +92,7 @@ data we probably ought to simplify the RTCC programs and MCC displays to
 be compatible.
 
 5. Finally, if we can't prove we need rendezvous radar data for Ascent,
-it's about certain we wont' be able to for Descent either. But we do have
+it's about certain we won't be able to for Descent either. But we do have
 to have it on T/M while the LM is on the lunar surface for "launch site"
 position determination and Ascent targeting. This data must be at a 
 high update rate (10 to 30 samples per minute) and preferably without
