--- a/67-PA-T-128A.md
+++ b/67-PA-T-128A.md
@@ -16,7 +16,7 @@ selected for each revolution of the command module and failure to lift
 off at one of those discrete times will result in a hold to the next
 discrete time. Each of these lift off times will be selected to produce
 the nominal differential altitude during the coelliptical rendezvous.
-If more than one discrete lift off opportunity is provoded per command
+If more than one discrete lift off opportunity is provided per command
 module revolution, it will be obtained by extending the rendezvous operation
 another revolution with orbital adjustment maneuvers provided to
 maintain the nominal differential altitude. (Personally, I feel one
