66-FM1-75: typographical fixes
Found through a critical proofread, and verified against
digitalapollo/Documents/Chapter7/tindallgrams.pdf

--- a/66-FM1-75.md
+++ b/66-FM1-75.md
@@ -7,13 +7,13 @@ subject: Apollo spacecraft computer programs--or, a bucket of worms
 ---
 
 Well, I just got back from MIT  with my weekly quota of new ulcers, which
-I thought might interest you. We spent one day discussing the AS-2O4
+I thought might interest you. We spent one day discussing the AS-204
 situation, another on AS-501 and AS-502, and the third day primarily
 on crew procedures associated with the LEM lunar rendezvous crew timeline. 
 I will give you my impression on each of these things, but first
 I would like to let you know that Ed Copps is coming down on June 16
 and 17 to give us a first cut at the overall schedule situation and the 
-status of the Program Development Plan which he Ems been putting together.
+status of the Program Development Plan which he has been putting together.
 To help Ed in this urgent task, we have asked, and IBM (RTCC) has kindly 
 agreed, to send people experienced in this area up to MIT for the first
 several days of the week to assist Ed and his people in the assembly
@@ -63,7 +63,7 @@ weeks. In addition, three other tests were identified associated with
 a variety of non-nominal situations for which completion was estimated 
 to be nine weeks.
 
-Apparently Ed Copps does not expect the AS-2O4 program test results to
+Apparently Ed Copps does not expect the AS-204 program test results to
 be formally documented, although Alex Kosmala says all this material
 will be readily available on file. What a shame to have to accept a situation 
 like that, but I suppose we have no real choice now.
@@ -94,7 +94,6 @@ determine the limitations and inadequacies of the program in order that
 operational procedures may be established to work around them. Hopefully,
 none of these deficiencies will be so serious that the flight
 may not be carried out on schedule.
-￼￼￼￼￼￼￼￼￼￼￼￼￼￼￼￼￼￼￼￼￼￼￼￼￼￼￼￼￼￼￼￼￼￼￼￼￼￼￼￼￼￼￼￼￼￼￼￼￼￼￼￼￼￼￼￼￼￼
 
 It is our intention at MSC to maintain a close watch by locating our 
 people at MIT most of the time such that we are immediately aware of 
@@ -122,7 +121,7 @@ on about November 15, which is exactly three months too late. Rather
 an interesting proposal, I thought, since it is so obviously so unacceptable. 
 After recovering from our complete shock, we started looking into 
 the alternatives available to us and came upon one which made some of us 
-wonder why we weren't doing it that way in the First place; i.e., just 
+wonder why we weren't doing it that way in the first place; i.e., just 
 using the AS-202 program as is with only minor modifications, such as
 changing a few of the constants. Theoretically, this should not only
 put us on schedule, but maybe ahead of schedule. An effort has been
@@ -134,7 +133,7 @@ AS-501 and AS-502 using the AS-202 program with very little modification
 or impact on the mission objectives.
 
 It appears that a somewhat greater burden will be placed on the ground 
-support for carrying out the AS-5Ol and 502 flights using the AS-202
+support for carrying out the AS-50l and 502 flights using the AS-202
 program in this way. The most significant disadvantage is that certain 
 alternate mission flexibilities and some launch abort capability must
 be given up. These capabilities would certainly be worthwhile if the 
