--- a/66-FM1-78.md
+++ b/66-FM1-78.md
@@ -149,7 +149,7 @@ galling that the "good guys," who have really been doing the job right,
 are forced into the position of seeing their efforts go right down the
 drain, and then to be forced into a crash effort to make up for deficiencies
 with another system. On the other hand, there seems to be no choice 
-in the matter for this particular mission
+in the matter for this particular mission.
 
 _AS-502_: It was our intention to use the AS-501 program virtually
 intact for AS-502, however, there were some discussions which were completely
