66-FM1-78: add underlining from original
"Program Development Plan" is underlined in
digitalapollo/Documents/Chapter7/tindallgrams.pdf
with the same straight-edge underline used for the section
headers. Take that as evidence that it is original rather than
some later markup and add it to the markdown transcription.

--- a/66-FM1-78.md
+++ b/66-FM1-78.md
@@ -173,7 +173,7 @@ this serious situation. Steps are also being taken to clear the building
 of non-software oriented personnel to accommodate the build-up.
 
 The major item which I am still concerned about and which is not, in 
-my opinion, obtaining adequate attention is the Program Development Plan.
+my opinion, obtaining adequate attention is the _Program Development Plan_.
 I discussed this with MIT management, informing them, in my opinion, that
 the situation was still entirely unacceptable in all of these areas. If 
 I don't see evidence of real improvement within the next couple of weeks, 
