--- a/68-PA-T-257A.md
+++ b/68-PA-T-257A.md
@@ -36,7 +36,7 @@ and we'll get along just using the propellant gauges without the light.
 If possible, a better fix would be to cut the wire on both sides of
 the master alarm and jumper the signal to the light only.
 
-Incidentally, on the D mission the propellant  levels will be low enough
+Incidentally, on the D mission the propellent  levels will be low enough
 when we get to the DPS rendezvous maneuvers - Phasing and Insertion - that
 if this system is acticated prior to ullage, the master alarm will likely
 go off.  I guess it will be standard procedure to punch it off if that
