--- a/68-PA-T-257A.md
+++ b/68-PA-T-257A.md
@@ -38,6 +38,6 @@ the master alarm and jumper the signal to the light only.
 
 Incidentally, on the D mission the propellent  levels will be low enough
 when we get to the DPS rendezvous maneuvers - Phasing and Insertion - that
-if this system is acticated prior to ullage, the master alarm will likely
+if this system is activated prior to ullage, the master alarm will likely
 go off.  I guess it will be standard procedure to punch it off if that
 happens.  But, where this is just an annoyance on D, it is dangerous on G.
