--- a/66-FM1-132.md
+++ b/66-FM1-132.md
@@ -62,7 +62,7 @@ As you can see, the list of programs required has really been reduced to
 a minimum. In addition, these programs are probably required in very 
 nearly the same form for the later missions, which means work on them 
 is not entirely wasted. The list was kept this small by assuming that 
-certain constraints on the mission were acceptable. In large part: this 
+certain constraints on the mission were acceptable. In large part, this 
 was done by carrying out a number of functions, manually by the crew, 
 which are ordinarily under computer control. This will be apparent by 
 glancing through the following list of constraints which I certainly 
@@ -120,7 +120,7 @@ manually by the crew.
 CSM shall do it.
 
 15. The LM shall always be extracted from the SIVB by the CSM even 
-if LM  1 spaceraft changes are required [I am not certain this is a 
+if LM  1 spacecraft changes are required [I am not certain this is a 
 constraint imposed by the computer program].
 
 16. The LM will be powered down during launch and until manned [here 
