--- a/66-FM1-133.md
+++ b/66-FM1-133.md
@@ -34,7 +34,7 @@ of the DAP for integrated systems tests.
 
 Jim Miller has beefed up the manpower in both of these areas recently.
 
-5here was one item requiring immediate attention if anything is to be 
+There was one item requiring immediate attention if anything is to be 
 done about it. This involves the manner in which the LGC is set into 
 action at Saturn launch. Apparently, the program is started by the 
 receipt of a guidance reference release (GRR) signal sent some 3 minutes 
