fixed typo in 68-PA-T-49A

--- a/68-PA-T-49A.md
+++ b/68-PA-T-49A.md
@@ -59,7 +59,7 @@ subject: "Fifth \"D\" Mission Rendezvous Mission Techniques meeting---don't miss
 
 4. By far the most extensive discussion dealt with the Terminal Phase 
    Initiation (TPI) maneuver and subsequent midcourse maneuvers in the 
-   event of a PNGCS failure, but wi the radar still working. This was 
+   event of a PNGCS failure, but with the radar still working. This was 
    the one area still lacking agreement. It is all based on the 
    assumption that a rendezvous radar failure is obvious as opposed to 
    insidious. Clarke Hackler (GCD) and Al Nathan (GAEC) where given the 
