alphabetic lists are closer to original

--- a/68-PA-T-49A.md
+++ b/68-PA-T-49A.md
@@ -22,40 +22,38 @@ subject: "Fifth \"D\" Mission Rendezvous Mission Techniques meeting---don't miss
    AGS must be maintained in optimum state to take over in the event the 
    PNGSCS fails. This applies to all maneuvers---CSI, CDH, TPI.
 
-   a. Checking of the PNGCS will be by comparison with the ground 
-      computed solution *only*. That is comparisons of maneuver 
-      targeting from other sources, such as the AGS, backup charts or 
-      the CSM will not be made to commit to the PNGCS. The PNGCS 
-      solution will be used providing it is within acceptable limits of 
-      the MSFN solution. One possible exception here is that, since the 
-      CSM optics provide very strong solutions to the TPI delta V 
-      components perpendicular to the line of sight, comparison with 
-      them may be advantageous.
+   (a). Checking of the PNGCS will be by comparison with the ground 
+   computed solution *only*. That is comparisons of maneuver targeting 
+   from other sources, such as the AGS, backup charts or the CSM will 
+   not be made to commit to the PNGCS. The PNGCS solution will be used 
+   providing it is within acceptable limits of the MSFN solution. One 
+   possible exception here is that, since the CSM optics provide very 
+   strong solutions to the TPI delta V components perpendicular to the 
+   line of sight, comparison with them may be advantageous.
 
-   b. The state vectors in the AGS will be updated each time PNGCS is 
-      confirmed to be acceptable. This will likely be at each time it is 
-      committed to make the next maneuver using the PNGCS.
+   (b). The state vectors in the AGS will be updated each time PNGCS is 
+   confirmed to be acceptable. This will likely be at each time it is 
+   committed to make the next maneuver using the PNGCS.
 
-   c. AGS alignments will be made each time the PNGCS is realigned and 
-      each time the state vector in the AGS is updated from the PNGCS.
+   (c). AGS alignments will be made each time the PNGCS is realigned and 
+   each time the state vector in the AGS is updated from the PNGCS.
 
-   d. No radar data will be input into the AGS as long as the PNGCS is 
-      working. In effect it is obtaining benefit of the radar via the 
-      PNGCS state vector updates since the PNGCS is processing the radar 
-      data.
+   (d). No radar data will be input into the AGS as long as the PNGCS is 
+   working. In effect it is obtaining benefit of the radar via the PNGCS 
+   state vector updates since the PNGCS is processing the radar data.
 
-   e. There is no need to prepare or learn to use backup charts for CSI 
-      and/or CDH maneuvers for this mission. Terminal phase charts are 
-      essential in the LM.
+   (e). There is no need to prepare or learn to use backup charts for 
+   CSI and/or CDH maneuvers for this mission. Terminal phase charts are 
+   essential in the LM.
 
 3. In the event of a PNGCS failure: CSI and CDH only.
 
-   a. For the CSI and CDH, use the AGS in almost the identical manner in 
-      which the Gemini spacecraft was flown .That is, use ground 
-      targeted maneuvers executed with the AGS External delta V mode.
+   (a). For the CSI and CDH, use the AGS in almost the identical manner 
+   in which the Gemini spacecraft was flown .That is, use ground 
+   targeted maneuvers executed with the AGS External delta V mode.
 
-   b. No radar data would be input into the AGS prior to the CSI and 
-      CDH.
+   (b). No radar data would be input into the AGS prior to the CSI and 
+   CDH.
 
 4. By far the most extensive discussion dealt with the Terminal Phase 
    Initiation (TPI) maneuver and subsequent midcourse maneuvers in the 
@@ -67,34 +65,32 @@ subject: "Fifth \"D\" Mission Rendezvous Mission Techniques meeting---don't miss
    alternative plans for TPI---PNGCS out, radar working---are as 
    follows:
 
-   a. Compare the onboard chart solution for TPI with the MSFN. If the 
-      comparison is favourable, execute the chart solution and, if not, 
-      use the MSFN delta V's and the maneuver execution time based on 
-      the onboard solution. The maneuver would be made using the AGS 
-      external delta V mode---this procedure to be amplified later in 
-      this memo. *Do not input radar* data into the AGS. OR...
+   (a). Compare the onboard chart solution for TPI with the MSFN. If the 
+   comparison is favourable, execute the chart solution and, if not, use 
+   the MSFN delta V's and the maneuver execution time based on the 
+   onboard solution. The maneuver would be made using the AGS external 
+   delta V mode---this procedure to be amplified later in this memo. *Do 
+   not input radar* data into the AGS. OR...
 
-   b. As soon as PNGCS failure is apparent (but not sooner than CDH) 
-      start updating AGS state vectors *with rendezvous radar data 
-      inputs*. Proceed using GS in place of PNGCS. That is, compare TPI 
-      solution with MSFN (and maybe CSM for components perpendicular to 
-      the line of sight). Use AGS solution if acceptable. If not, 
-      execute MSFN delta V's using AGS External Delta V mode. The 
-      argument for inputting rendezvous radar in the AGS and using its 
-      solution is that it is a closed loop system which analysis shows 
-      should work well using rendezvous radar and more analysis is on 
-      the way to prove it further. In addition, Flight Crew is concerned 
-      that the arithmetic associated with the charts makes its solution 
-      more susceptible to crew error, whereas the AGS does the 
-      arithmetic for them. The arguments against use of radar in the AGS 
-      for TPI is that to attempt to maintain both the AGS and charts 
-      solutions is likely to create an excessive work load upon the 
-      crew, particularly when considering the henderences of the 
-      spacesuits and the zero g environment. Furthermore, we have 
-      considerable confidence in the charts and expect that if the 
-      charts and AGS (with radar) solutions differ we would be inclined 
-      to believe the charts and use that solution instead of the AGS 
-      anyway.
+   (b). As soon as PNGCS failure is apparent (but not sooner than CDH) 
+   start updating AGS state vectors *with rendezvous radar data inputs*. 
+   Proceed using GS in place of PNGCS. That is, compare TPI solution 
+   with MSFN (and maybe CSM for components perpendicular to the line of 
+   sight). Use AGS solution if acceptable. If not, execute MSFN delta 
+   V's using AGS External Delta V mode. The argument for inputting 
+   rendezvous radar in the AGS and using its solution is that it is a 
+   closed loop system which analysis shows should work well using 
+   rendezvous radar and more analysis is on the way to prove it further. 
+   In addition, Flight Crew is concerned that the arithmetic associated 
+   with the charts makes its solution more susceptible to crew error, 
+   whereas the AGS does the arithmetic for them. The arguments against 
+   use of radar in the AGS for TPI is that to attempt to maintain both 
+   the AGS and charts solutions is likely to create an excessive work 
+   load upon the crew, particularly when considering the henderences of 
+   the spacesuits and the zero g environment. Furthermore, we have 
+   considerable confidence in the charts and expect that if the charts 
+   and AGS (with radar) solutions differ we would be inclined to believe 
+   the charts and use that solution instead of the AGS anyway.
 
 5. The following is the most startling conclusion reached today: IF the 
    LM PNGCS is working but rendezvous radar has failed, we have a 
@@ -104,14 +100,14 @@ subject: "Fifth \"D\" Mission Rendezvous Mission Techniques meeting---don't miss
    subsequent midcourse correction maneuvers and the LM do the braking 
    maneuvers.
 
-   a. The command module would compare its TPI solution with the MSFN. 
-      If the comparison is favorable that maneuver would be executed; if 
-      not, the command module would execute the MSFN delta V's using its 
-      own time of ignition.
+   (a). The command module would compare its TPI solution with the MSFN. 
+   If the comparison is favorable that maneuver would be executed; if 
+   not, the command module would execute the MSFN delta V's using its 
+   own time of ignition.
 
-   b. The command module would voice relay to the LM the maneuvers it 
-      has executed in order that the LM crew could update the command 
-      module state vectors in the LGC using the Target Delta V program. 
+   (b). The command module would voice relay to the LM the maneuvers it 
+   has executed in order that the LM crew could update the command 
+   module state vectors in the LGC using the Target Delta V program. 
 
 6. I would like to present here the rationale for making the command 
    module active for TPI and midcourse when only the rendezvous radar 
