Convert to UTF-8, fix filename and additional transcript

--- a/68-PA-T-56A.md
+++ b/68-PA-T-56A.md
@@ -1,4 +1,4 @@
----
+ï»¿---
 layout: tindallgram
 date: Mar 7, 1968
 from: PA/Chief, Apollo Data Priority Coordination
@@ -43,7 +43,7 @@ is currently in the order listed above: that is, if possible, it is
 preferable to obtain lunar operations experience. We have discussed at
 great length the extent of IU degradation which would still permit
 lunar operations and it is certainly gross.  For example, we are told
-10° misalignment of the IU platform throughout the entire TLI may be
+10Â° misalignment of the IU platform throughout the entire TLI may be
 tolerable.  I note these things since previous ground rules were based
 on considerations of that type, but we have now concluded that they do
 not account for the real problem.  Namely, if the S-IVB has failed to
@@ -98,7 +98,7 @@ trajectory since the S-IVB is assumed to be working normally.  There
 apparently is adequate redundancy in the SCS to be tolerant of further
 systems failures.  Also, consideration may be given to using the PNGCS
 even if it has failed to the extent that the platform is drifting at
-the rate of 5° per hour.  For example, that is just equivalent to the
+the rate of 5Â° per hour.  For example, that is just equivalent to the
 SCS.  Indications from all knowledgeable lunar return entry people are
 that no screw safety problems are involved in that mission phase using
 the backup systems, although, of course, the spacecraft may not land
