--- a/68-PA-T-57A.md
+++ b/68-PA-T-57A.md
@@ -81,7 +81,7 @@ of the CSM PNCGS in accordance with the philosophy noted in paragraph 2.
 There is one big source of "error" in these plots resulting from our inability
 to align the CSM PNGCS accurately in azimuth on the launch pad.  We had a
 similar problem, you recall, on Gemini and our solution here is about the
-same.  It is proposed that a simple computation be performed similar ro the
+same.  It is proposed that a simple computation be performed similar to the
 platform alignment update carried out in the Gemini program at 100 seconds
 after lift off.  This computation was based on the assumption that any
 difference in the horizontal velocity vectors detected when comparing the
