--- a/68-PA-T-61A.md
+++ b/68-PA-T-61A.md
@@ -26,7 +26,7 @@ someone has reason for disagreeing with this, their recommendation is accepted
 and all further work should be based upon it.
 
 
-3.  In response to an action item from the very first meeting, the 0rbital
+3.  In response to an action item from the very first meeting, the Orbital
 Mission Analysis Branch (formerly the Rendezvous Analysis Branch) reported
 their progress on developing techniques for insuring proper station coverage
 and lighting conditions during the rendezvous exercise in spite of trajectory
