--- a/68-PA-T-48A.md
+++ b/68-PA-T-48A.md
@@ -39,7 +39,7 @@ discussed with Gene Kranz, to establish how long it should take to do
 this system check in order that we may make all other mission planning
 and screw procedures consistent.  It is expected to be in the order of
 3 minutes, unless it takes a long time to really detect and APS pressure
-leak.  Until the GO/NO GO we intent to remain in a state from which we
+leak.  Until the GO/NO GO we intend to remain in a state from which we
 can instantly "abort stage" and go.  After that it will take much
 longer.
 
