--- a/68-PA-T-55A.md
+++ b/68-PA-T-55A.md
@@ -22,7 +22,7 @@ a similar job for Mission "D" already.)
 3.  The "E" mission is typical of any involving LM operations.  It starts
 with an undocking and visual inspection.  This is followed by a small RCS
 maneuver by one vehicle or the other to provide a controlled mini-distance
-separation trajector to avoid costly station keeping.  This is followed
+separation trajectory to avoid costly station keeping.  This is followed
 in turn by a larger separation maneuver which kicks off whatever is to be
 done.  In this case, the larger separation maneuver, called a "Phasing
 maneuver", places the LM ahead and above the command module properly
