Removed unicode BOM and converted to Unix EOL

--- a/68-PA-T-48A.md
+++ b/68-PA-T-48A.md
@@ -1,8 +1,8 @@
-﻿---
+---
 layout: tindallgram
-date: Mar 4, 1968
+date: Mar 4 1968
 from: PA/Chief, Apollo Data Priority Coordination
-serial: 66-PA-T-48A
+serial: 68-PA-T-48A
 subject: Ascent Phase Mission Techniques meeting - February 27, 1968
 ---
 1.  In the absence of Charley Parker, our beloved leader, I inherited
