--- a/68-PA-T-56A.md
+++ b/68-PA-T-56A.md
@@ -1,6 +1,6 @@
-﻿---
+---
 layout: tindallgram
-date: Mar 7, 1968
+date: Mar 7 1968
 from: PA/Chief, Apollo Data Priority Coordination
 serial: 68-PA-T-56A
 subject: Guidance system oriented ground rules for TLI Go/No Go
