--- a/68-PA-T-57A.md
+++ b/68-PA-T-57A.md
@@ -1,6 +1,6 @@
-﻿---
+---
 layout: tindallgram
-date: Mar 12, 1968
+date: Mar 12 1968
 from: PA/Chief, Apollo Data Priority Coordination
 serial: 68-PA-T-57A
 subject: Sixth Midcourse Phase Mission Techniques meetings
