--- a/68-PA-T-59A.md
+++ b/68-PA-T-59A.md
@@ -1,8 +1,8 @@
-﻿---
+---
 layout: tindallgram
-date: Mar 13, 1968
+date: Mar 13 1968
 from: PA/Chief, Apollo Data Priority Coordination
-serial: 66-PA-T-59A
+serial: 68-PA-T-59A
 subject: Seventh "C" Mission Rendezvous Mission Techniques meeting.
 ---
 
