--- a/68-PA-T-61A.md
+++ b/68-PA-T-61A.md
@@ -1,8 +1,8 @@
-﻿---
+---
 layout: tindallgram
-date: Mar 4, 1968
+date: Mar 4 1968
 from: PA/Chief, Apollo Data Priority Coordination
-serial: 66-PA-T-61A
+serial: 68-PA-T-61A
 subject: Seventh "D" Mission Rendezvous Mission Techniques meeting.
 ---
 
